# deepagents

./: ENHANCED_SETUP.md  ENHANCEMENT_SUMMARY.md  README.md  pyproject.toml  test_multi_model.py
examples/research/: example_with_kimi.py  prompts.py  requirements.txt  research_agent_groq.py  research_agent_optimized.py  test_groq_agent.py
src/deepagents/: __init__.py  context_optimizer.py  context_tools.py  graph.py  sub_agent.py
