[project]
name = "deepagents"
version = "0.1.0"
description = "Enhanced deep agents with per-subagent model assignment, built-in context optimization, sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-groq>=0.3.6",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
    "langgraph-cli>=0.3.6",
    "groq>=0.30.0",
]


[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepagents"]
[tool.setuptools.package-dir]
"deepagents" = "src/deepagents"

[tool.setuptools.package-data]
"*" = ["py.typed"]
